--- a/iOSBook/iOSBook/Base.lproj/Main.storyboard
+++ b/iOSBook/iOSBook/Base.lproj/Main.storyboard
@@ -1,26 +1,99 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="x6U-L6-Dbh">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Item 2-->
+        <scene sceneID="sMN-1l-N5V">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="rFz-aw-xGL" customClass="RemindViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="fyj-fu-edF"/>
+                        <viewControllerLayoutGuide type="bottom" id="zGo-pX-8J6"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="Pc5-3R-4Rr">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="IHY-GP-NNL">
+                                <rect key="frame" x="10" y="109" width="349" height="201"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="349" id="6hg-4Q-M2Y"/>
+                                    <constraint firstAttribute="height" constant="201" id="IDn-Vy-02z"/>
+                                </constraints>
+                                <date key="date" timeIntervalSinceReferenceDate="511867688.86314797">
+                                    <!--2017-03-22 09:28:08 +0000-->
+                                </date>
+                            </datePicker>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iF6-Z1-kkA">
+                                <rect key="frame" x="151" y="410" width="46" height="30"/>
+                                <state key="normal" title="提醒我"/>
+                                <connections>
+                                    <action selector="addRemin:" destination="rFz-aw-xGL" eventType="touchUpInside" id="XTw-KX-0l6"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="iF6-Z1-kkA" firstAttribute="top" secondItem="IHY-GP-NNL" secondAttribute="bottom" constant="100" id="TRW-Ol-2JX"/>
+                            <constraint firstItem="IHY-GP-NNL" firstAttribute="top" secondItem="fyj-fu-edF" secondAttribute="bottom" constant="89" id="UU0-6J-hi2"/>
+                            <constraint firstItem="iF6-Z1-kkA" firstAttribute="leading" secondItem="Pc5-3R-4Rr" secondAttribute="leading" constant="151" id="bcA-hF-ajf"/>
+                            <constraint firstAttribute="trailing" secondItem="IHY-GP-NNL" secondAttribute="trailing" constant="16" id="gOw-2g-s8J"/>
+                            <constraint firstItem="IHY-GP-NNL" firstAttribute="leading" secondItem="Pc5-3R-4Rr" secondAttribute="leading" constant="10" id="uLt-MS-zTJ"/>
+                        </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="sLb-eZ-1Ya"/>
+                    <connections>
+                        <outlet property="addRemind" destination="iF6-Z1-kkA" id="uyN-vn-reb"/>
+                        <outlet property="datePicker" destination="IHY-GP-NNL" id="E1X-HD-tZs"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="biW-kO-Z2G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="252" y="269.41529235382313"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="d3L-Bt-6y5">
+            <objects>
+                <viewController id="Qga-D0-DMq" customClass="HypnosisViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RqO-HE-wIO"/>
+                        <viewControllerLayoutGuide type="bottom" id="nEH-hz-pUW"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="YGX-Zw-28i">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="ryo-jD-zrb"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4bf-g2-4BJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="252" y="-385"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Tqy-LP-UYZ">
+            <objects>
+                <tabBarController id="x6U-L6-Dbh" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="1tH-qI-dyB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Qga-D0-DMq" kind="relationship" relationship="viewControllers" id="xXa-kK-Dl9"/>
+                        <segue destination="rFz-aw-xGL" kind="relationship" relationship="viewControllers" id="dN1-mO-tg8"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TAb-mU-1M9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-700" y="-57"/>
         </scene>
     </scenes>
 </document>
